--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ volumes:
 
 services:
   sequence:
-    image: docker.pkg.github.com/decimals/sequence/sequence:0.0.1
+    build: .
     ports:
     - "8910:8910"
     environment:
